css/style.css
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	display: flex;
	height: 100vh;
}

.slider {
	position: relative;
	margin: auto;
	height: 80%;
	width: 60%;
	max-width: 600px;
	max-height: 400px;
	background-color: salmon;
}

.controls {
	display: flex;
	justify-content: space-between;
	align-items: center;
	position: absolute;
	inset: 0;
	z-index: 10;
}

.btn-left, .btn-right {
	display: flex;
	justify-content: center;
	align-items: center;
	margin: .5rem;
	width: 3rem;
	height: 3rem;
	border-radius: 100%;
	background-color: white;
}

.btn-left:hover, .btn-right:hover {
	background-color: lightblue;
	cursor: pointer;
}

.slider-img {
	position: absolute;
	inset: 0;
	display: none;
	width: 100%;
	height: 100%;
	object-fit: cover;
	object-position: center;
}

.active {
	display: block;
}

